[package]
name = "utmvm"
version = "0.1.0"
edition = "2021"
description = "Rust library for creating and managing UTM VMs on macOS via utmctl and osascript"
keywords = ["utm", "macos", "virtualization", "qemu", "vm"]
license = "MIT"

[dependencies]
thiserror = "=1.0.69"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.43.0", features = ["process", "time", "macros", "rt"] }
uuid = { version = "=1.11.0", features = ["v4"] }
rand = "=0.8.5"

[dev-dependencies]
tokio = { version = "=1.43.0", features = ["full"] }